:toc: preamble
:project-url: https://github.com/sorairolake/sysexits-rs
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.7.6\...v0.7.7[0.7.7] - 2023-12-07

=== Changed

* Reduce package size

== {compare-url}/v0.7.5\...v0.7.6[0.7.6] - 2023-11-30

=== Removed

* Remove DEP5 file ({pull-request-url}/65[#65])

== {compare-url}/v0.7.4\...v0.7.5[0.7.5] - 2023-11-04

=== Added

* Add Code of Conduct ({pull-request-url}/60[#60])

== {compare-url}/v0.7.3\...v0.7.4[0.7.4] - 2023-10-03

=== Added

* Add conversion to `i8`, `i16`, `i64`, `i128`, `isize`, `u16`, `u64`, `u128`
  and `usize` ({pull-request-url}/56[#56])

== {compare-url}/v0.7.2\...v0.7.3[0.7.3] - 2023-10-01

=== Changed

* Extend `io::ErrorKind` conversion to support variants available in the
  nightly ({pull-request-url}/52[#52])

== {compare-url}/v0.7.1\...v0.7.2[0.7.2] - 2023-09-07

=== Changed

* Change to use a list of copyright holders in copyright notice
  ({pull-request-url}/46[#46])

== {compare-url}/v0.7.0\...v0.7.1[0.7.1] - 2023-09-03

=== Fixed

* Fix `Cargo.lock`

== {compare-url}/v0.6.3\...v0.7.0[0.7.0] - 2023-09-03 [YANKED]

=== Changed

* Change `SPDX-FileCopyrightText` of each file to include only the year of
  initial publication ({pull-request-url}/38[#38])
* Change "Contributors" to "other contributors" in the copyright notice
  ({pull-request-url}/38[#38])
* Remove unnecessary newline after period ({pull-request-url}/39[#39])
* Change parameters of methods to pass-by-reference ({pull-request-url}/40[#40])

== {compare-url}/v0.6.2\...v0.6.3[0.6.3] - 2023-08-09

=== Added

* Add more doctests to `From` ({pull-request-url}/36[#36])

== {compare-url}/v0.6.1\...v0.6.2[0.6.2] - 2023-08-01

=== Changed
