@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.7.7\...HEAD[Unreleased]
+
+=== Fixed
+
+* Fix clippy warnings for examples ({pull-request-url}/70[#70])
+
 == {compare-url}/v0.7.6\...v0.7.7[0.7.7] - 2023-12-07
 
 === Changed
